nav sidbar updated

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           </ul>
         </nav>
       </header>
+      <!-- Mobile Navbar -->
       <nav class="mobile-nav">
         <ul class="mobile-nav__items">
           <li id="mobile-nav__about" class="mobile-nav__item">
